dist_man1_MANS=

if BUILD_UFOD
  dist_man1_MANS+=UFOd.1
endif

if ENABLE_QT
  dist_man1_MANS+=UFO-qt.1
endif

if BUILD_UFO_CLI
  dist_man1_MANS+=UFO-cli.1
endif

if BUILD_UFO_TX
  dist_man1_MANS+=UFO-tx.1
endif

if BUILD_UFO_UTIL
  dist_man1_MANS+=UFO-util.1
endif

if ENABLE_WALLET
if BUILD_UFO_WALLET
  dist_man1_MANS+=UFO-wallet.1
endif
endif
